# alfa-icp-resolver

./: .gitignore  README.md
ethereum-contracts/: README.md  hardhat.config.ts  package-lock.json  package.json
ethereum-contracts/contracts/: HashedTimelock.sol  LiquidityVault.sol
ethereum-contracts/contracts/interfaces/: ILiquidityVault.sol
ethereum-contracts/docs/: ARCHITECTURE_DESCRIPTION.md
ethereum-contracts/ignition/modules/: HTLCAndVaultModule.ts
ethereum-contracts/test/: HashedTimelock.test.ts  LiquidityVault.test.ts
ethereum-contracts/test/integration/: HashedTimelock.integration.test.ts  LiquidityVault.integration.test.ts
ethereum-contracts/test/utils/: event-helpers.ts
icp-canisters/: .gitignore  Cargo.toml  README.md  dfx.json  init.args  package-lock.json  package.json  tsconfig.json
icp-canisters/src/: alfa_icp_resolver.did  lib.rs  transfer_service.rs
icp-canisters/tests/: README.md  dfx.const.ts  ledger.test.ts  setup.ts
icp-canisters/tests/idl/: ledger_idl.ts  resolver_idl.ts  resolver_srvs.ts
