[package]
name = "alfa-icp-resolver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.0"
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.0"
hex = "0.4.0"
icrc-ledger-types = "0.1.5"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 